k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-secure-app
  labels:
    app: oauth-secure-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-secure-app
  template:
    metadata:
      labels:
        app: oauth-secure-app
    spec:
      containers:
        - name: oauth-secure-app
          image: oauth-secure-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
